# finhub

./: .env.example  .gitignore  README.md  docker-compose.yml
NFRA_Challenge_Data/: MANUAL_DOWNLOAD_LINKS.txt
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/models/: __init__.py  chat.py  compliance.py  document.py
backend/app/pipelines/: __init__.py  compliance_pipeline.py  ingest_pipeline.py
backend/app/routers/: __init__.py  analytics.py  chat.py  compliance.py  examination.py  ingest.py  reports.py  search.py
backend/app/services/: __init__.py  analytics_engine.py  compliance_engine.py  document_processor.py  embedding_service.py  examination_tool.py  llm_service.py  mongo_service.py  report_generator.py  vector_store.py
backend/app/templates/: compliance_report.html
backend/app/utils/: __init__.py  chunking.py  metadata.py
backend/scripts/: index_compliance_rules.py
backend/tests/: test_compliance.py  test_ingest.py  test_search.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/analytics/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/compliance/: page.tsx
frontend/app/examination/: page.tsx
frontend/app/ingest/: page.tsx
frontend/app/reports/: page.tsx
frontend/app/search/: page.tsx
frontend/components/ui/: badge.tsx  (+4 more)
frontend/lib/: api.ts  types.ts
scripts/: ingest_compliance_rules.py  seed_test_data.py
(+18 files in other folders)
