[project]
name = "nfra-compliance-engine"
version = "0.1.0"
description = "AI-powered Financial Reporting Compliance Engine for NFRA"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
